--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1088,6 +1088,114 @@ section {
   border-color: #fcd702;
 }
 
+footer {
+  color: #fff;
+}
+
+.footer-top {
+  background: #669002;
+}
+
+.footer-top ul {
+  font-size: 0.77778rem;
+  font-weight: 300;
+  padding: 20px 0;
+}
+
+.footer-top ul li {
+  margin-bottom: 15px;
+}
+
+.top-list-title {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 3px;
+  text-transform: uppercase;
+}
+
+.desk-br,
+.desk-icon {
+  display: none;
+}
+
+.footer-bottom {
+  font-size: 1rem;
+  font-weight: 300;
+  padding: 20px 0;
+  background: #709f01;
+}
+
+.footer-bottom ul a {
+  font-size: 1.22222rem;
+  font-weight: 400;
+}
+
+.footer-bottom ul p {
+  font-size: 0.77778rem;
+}
+
+.bottom-subitem,
+.footer-bottom-item {
+  margin-bottom: 40px;
+}
+
+.bottom-subitem:last-child,
+.footer-bottom-item:last-child {
+  margin-bottom: 0;
+}
+
+.subitem-title {
+  font-size: 1.22222rem;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+
+.footer-bottom-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.footer-bottom-social a {
+  display: block;
+  margin-right: 14px;
+  width: 44px;
+  height: 44px;
+  border: 1px solid;
+  background-image: url("../img/footer-social.png");
+}
+
+.footer-bottom-social a:last-child {
+  margin-right: 0;
+}
+
+.footer-bottom-social a:hover {
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+}
+
+.vk {
+  background-position-x: 2%;
+}
+
+.facebook {
+  background-position-x: 50%;
+}
+
+.ok {
+  background-position-x: 98%;
+}
+
+.privacy {
+  font-size: 0.66667rem;
+  line-height: 1.3;
+}
+
+.privacy a {
+  text-decoration: underline;
+}
+
 @media only screen and (min-width: 500px) {
   .wrap {
     display: -webkit-box;
@@ -1168,6 +1276,19 @@ section {
     margin: 0;
     text-align: left;
   }
+  .footer-bottom-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .footer-bottom-item .bottom-subitem {
+    margin-bottom: 0;
+    margin-right: 20px;
+    width: 50%;
+  }
+  .footer-bottom-item .bottom-subitem:last-child {
+    margin-right: 0;
+  }
 }
 
 @media only screen and (min-width: 768px) {
@@ -1204,6 +1325,34 @@ section {
   .banner-slider img {
     max-width: 400px;
   }
+  .footer-top ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer-top ul li {
+    margin-bottom: 0;
+    margin-right: 15px;
+  }
+  .footer-top ul li:last-child {
+    margin-right: 0;
+  }
+  .footer-bottom .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .footer-bottom-item {
+    margin-bottom: 0;
+    margin-right: 20px;
+    width: 50%;
+  }
+  .footer-bottom-item:last-child {
+    margin-right: 0;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
@@ -1236,6 +1385,35 @@ section {
   }
   .banner-slider img {
     max-width: 600px;
+  }
+  .footer-top ul {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .footer-top ul li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer-top ul li img {
+    margin-right: 25px;
+  }
+  .footer-top ul p {
+    line-height: 1.5;
+  }
+  .footer-top .desk-br,
+  .footer-top .desk-icon {
+    display: block;
+  }
+  .top-list-title {
+    margin-bottom: 5px;
+  }
+  .footer-bottom {
+    padding-top: 45px;
+    padding-bottom: 45px;
   }
 }
 
@@ -1306,6 +1484,20 @@ section {
   .card-title:after {
     bottom: -25px;
   }
+  .footer-bottom {
+    position: relative;
+    overflow: hidden;
+  }
+  .footer-bottom:after {
+    content: '';
+    position: absolute;
+    bottom: -100px;
+    right: -80px;
+    width: 200px;
+    height: 200px;
+    border: 1px solid;
+    border-radius: 50%;
+  }
 }
 
 @media only screen and (min-width: 1600px) {
@@ -1328,6 +1520,30 @@ section {
   }
   .banner-slider .slick-next {
     right: -70px;
+  }
+  .footer-top ul {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .footer-top ul li {
+    position: relative;
+  }
+  .footer-top ul li:before {
+    content: '';
+    position: absolute;
+    width: 2px;
+    height: 65px;
+    background: #709f01;
+    left: -25px;
+  }
+  .footer-top ul li:first-child:before {
+    content: none;
+  }
+  .footer-bottom:before {
+    content: url("../img/footer-left-img.png");
+    position: absolute;
+    left: 0;
+    bottom: 0;
   }
 }
 
