--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1088,6 +1088,196 @@ section {
   border-color: #fcd702;
 }
 
+.info-section {
+  font-size: 0.88889rem;
+}
+
+.info-section h3 {
+  font-size: 1.66667rem;
+  font-weight: 300;
+  margin-bottom: 15px;
+}
+
+.info-section-item {
+  margin-bottom: 40px;
+}
+
+.info-section-item:last-child {
+  margin-bottom: 0;
+}
+
+.info-item-wrap {
+  padding-top: 15px;
+  border-top: 2px solid #8ecf04;
+}
+
+.inner-item {
+  margin-top: 26px;
+  margin-left: 30px;
+  padding: 22px;
+  border: 2px solid #8ecf04;
+}
+
+.inner-item p {
+  margin-bottom: 10px;
+}
+
+.inner-item.about-us {
+  position: relative;
+}
+
+.inner-item.about-us:before {
+  content: url("../img/about-us-img.png");
+  position: absolute;
+  top: -31px;
+  left: -34px;
+  background: #fff;
+  height: 35px;
+}
+
+.inner-item.about-us a {
+  position: relative;
+  display: inline-block;
+  margin-top: 25px;
+  padding-right: 25px;
+  color: #8ecf04;
+}
+
+.inner-item.about-us a:before, .inner-item.about-us a:after {
+  content: '';
+  position: absolute;
+}
+
+.inner-item.about-us a:before {
+  width: 20px;
+  height: 1px;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  top: 50%;
+  right: 0;
+  background: #8ecf04;
+}
+
+.inner-item.about-us a:after {
+  position: absolute;
+  top: 4px;
+  right: 0;
+  width: 6px;
+  height: 6px;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+  border-top: 1px solid;
+  border-right: 1px solid;
+}
+
+.day-product-item {
+  border: 1px solid #a9a9a9;
+  margin-bottom: 18px;
+  padding: 15px;
+}
+
+.day-product-item:last-child {
+  margin-bottom: 0;
+}
+
+.day-product-item img {
+  margin: 0 auto 15px;
+  width: 100px;
+}
+
+.day-product-subtitle {
+  font-weight: 300;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 10px;
+}
+
+.delivery-info {
+  margin-right: 15px;
+}
+
+.delivery-info p {
+  padding-left: 22px;
+  position: relative;
+}
+
+.delivery-title:before {
+  content: url("../img/delivery-img.png");
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.amount:before {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 4px;
+  width: 10px;
+  height: 6px;
+  -webkit-transform: rotate(135deg);
+      -ms-transform: rotate(135deg);
+          transform: rotate(135deg);
+  border-top: 1px solid #70a000;
+  border-right: 1px solid #70a000;
+}
+
+.delivery-title {
+  margin-bottom: 5px;
+}
+
+.price-title {
+  font-size: 0.77778rem;
+  margin-bottom: 5px;
+}
+
+.price {
+  font-size: 1.11111rem;
+  color: #70a000;
+}
+
+.usefull-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.usefull-item:last-child {
+  margin-bottom: 0;
+}
+
+.usefull-item-date {
+  margin-right: 10px;
+  padding: 10px 5px;
+  border: 4px solid #8ecf04;
+  text-align: center;
+}
+
+.date-day {
+  font-size: 1.88889rem;
+  font-weight: 700;
+  margin-bottom: 5px;
+  line-height: 1;
+}
+
+.usefull-item-desc {
+  font-size: 0.77778rem;
+  font-weight: 300;
+}
+
+.usefull-item-title {
+  font-size: 1.11111rem;
+  margin-bottom: 10px;
+  font-weight: 400;
+}
+
 footer {
   color: #fff;
 }
@@ -1276,6 +1466,20 @@ footer {
     margin: 0;
     text-align: left;
   }
+  .info-section {
+    max-width: 500px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .day-product-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .day-product-item img {
+    margin-bottom: 0;
+    margin-right: 15px;
+  }
   .footer-bottom-item {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1386,6 +1590,29 @@ footer {
   .banner-slider img {
     max-width: 600px;
   }
+  .info-section {
+    max-width: none;
+  }
+  .info-section .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .info-section-item {
+    margin-right: 20px;
+    margin-bottom: 0;
+    width: 100%;
+  }
+  .info-section-item:last-child {
+    margin-right: 0;
+    max-width: 325px;
+  }
+  .day-product-item {
+    display: block;
+  }
+  .day-product-item img {
+    margin: 0 auto 15px;
+  }
   .footer-top ul {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -1484,6 +1711,36 @@ footer {
   .card-title:after {
     bottom: -25px;
   }
+  .info-section-item:nth-child(2) {
+    max-width: 425px;
+  }
+  .inner-item {
+    padding: 20px;
+  }
+  .inner-item p {
+    margin-bottom: 20px;
+  }
+  .inner-item.about-us a {
+    margin-top: 0;
+  }
+  .inner-item.about-us a:after {
+    top: 6px;
+  }
+  .day-product-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .day-product-item img {
+    margin-bottom: 0;
+    margin-right: 15px;
+  }
+  .day-product-subtitle {
+    margin-top: 15px;
+  }
   .footer-bottom {
     position: relative;
     overflow: hidden;
@@ -1520,6 +1777,29 @@ footer {
   }
   .banner-slider .slick-next {
     right: -70px;
+  }
+  .inner-item {
+    font-size: 0.88889rem;
+    padding: 30px;
+  }
+  .inner-item p {
+    margin-bottom: 25px;
+  }
+  .inner-item.about-us a {
+    margin-top: 5px;
+  }
+  .day-product-item img {
+    width: auto;
+  }
+  .day-product-subtitle {
+    font-size: 0.66667rem;
+  }
+  .price-title {
+    font-size: 0.55556rem;
+    margin-bottom: 0;
+  }
+  .usefull-item-title {
+    margin-bottom: 0;
   }
   .footer-top ul {
     padding-left: 30px;
