--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1088,6 +1088,182 @@ section {
   border-color: #fcd702;
 }
 
+.categories-sect {
+  margin-bottom: 45px;
+}
+
+.categories-sect .container {
+  padding-bottom: 45px;
+  overflow: hidden;
+}
+
+.categories-sect .slick-slide {
+  margin: 0 30px 0 0;
+}
+
+.categories-sect .slick-prev,
+.categories-sect .slick-next {
+  bottom: -40px;
+}
+
+.categories-sect .slick-prev:before,
+.categories-sect .slick-next:before {
+  padding: 0 10px;
+  border: 2px solid #8ecf04;
+  color: #8ecf04;
+}
+
+.categories-sect .slick-prev {
+  left: 0;
+}
+
+.categories-sect .slick-next {
+  right: 34px;
+}
+
+h2 {
+  font-size: 1.44444rem;
+  font-weight: 300;
+  position: relative;
+  margin-bottom: 30px;
+}
+
+h2:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  border-bottom: 2px solid #8ecf04;
+}
+
+h2 span {
+  padding-right: 10px;
+  background: #fff;
+}
+
+.best-goods-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.good-item {
+  position: relative;
+  margin-right: 20px;
+  padding: 40px 20px 20px;
+  min-width: 270px;
+  border: 1px solid #a9a9a9;
+}
+
+.good-item:first-child {
+  margin-left: 6px;
+}
+
+.good-item:last-child {
+  margin-right: 0;
+}
+
+.good-item img {
+  display: block;
+  margin: 0 auto 30px;
+  width: 170px;
+}
+
+.good-item button {
+  font-size: 1rem;
+  margin-right: 20px;
+  padding: 8px 0;
+  width: 115px;
+  border-radius: 5px;
+  border: 0;
+  background: #f76c06;
+  color: #fff;
+  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  text-transform: uppercase;
+  outline: none;
+}
+
+.good-item a {
+  font-size: 0.77778rem;
+  color: #a9a9a9;
+  border-bottom: 1px dashed;
+}
+
+.good-item a span {
+  color: #cc0619;
+}
+
+.product-tip {
+  font-size: 0.77778rem;
+  font-weight: 700;
+  position: absolute;
+  top: 14px;
+  left: -6px;
+  padding: 5px 10px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.product-tip:before, .product-tip:after {
+  content: '';
+  position: absolute;
+}
+
+.product-tip:before {
+  bottom: -7px;
+  left: 0;
+  border-top: 7px solid;
+  border-left: 5px solid transparent;
+}
+
+.product-tip:after {
+  top: 0;
+  right: -8px;
+  border-top: 11px solid;
+  border-bottom: 11px solid;
+  border-right: 8px solid transparent;
+}
+
+.good-item-title {
+  font-size: 0.88889rem;
+  margin-bottom: 20px;
+}
+
+.good-item-subtitle {
+  font-size: 0.66667rem;
+  margin-bottom: 30px;
+}
+
+.good-item-subtitle .price-title {
+  font-size: 0.55556rem;
+  margin-bottom: 0;
+}
+
+.is-new {
+  background: #e0c00c;
+}
+
+.is-new:before, .is-new:after {
+  border-top-color: #e0c00c;
+}
+
+.is-new:after {
+  border-bottom-color: #e0c00c;
+}
+
+.is-stock {
+  background: #f76c06;
+}
+
+.is-stock:before, .is-stock:after {
+  border-top-color: #f76c06;
+}
+
+.is-stock:after {
+  border-bottom-color: #f76c06;
+}
+
 .info-section {
   font-size: 0.88889rem;
 }
@@ -1187,7 +1363,8 @@ section {
   width: 100px;
 }
 
-.day-product-subtitle {
+.day-product-subtitle,
+.good-item-subtitle {
   font-weight: 300;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1466,6 +1643,9 @@ footer {
     margin: 0;
     text-align: left;
   }
+  h2 {
+    font-size: 2rem;
+  }
   .info-section {
     max-width: 500px;
     margin-right: auto;
@@ -1528,6 +1708,28 @@ footer {
   }
   .banner-slider img {
     max-width: 400px;
+  }
+  .categories-sect .container {
+    padding-bottom: 0;
+    padding-top: 5px;
+  }
+  .categories-sect .slick-prev,
+  .categories-sect .slick-next {
+    top: -50px;
+  }
+  .categories-sect .slick-prev {
+    left: auto;
+    right: 100px;
+  }
+  h2 {
+    overflow: hidden;
+  }
+  h2:after {
+    right: 130px;
+  }
+  h2 span {
+    position: relative;
+    z-index: 1;
   }
   .footer-top ul {
     display: -webkit-box;
@@ -1711,6 +1913,11 @@ footer {
   .card-title:after {
     bottom: -25px;
   }
+  .good-item button {
+    font-size: 0.94444rem;
+    margin-right: 15px;
+    width: 95px;
+  }
   .info-section-item:nth-child(2) {
     max-width: 425px;
   }
@@ -1738,7 +1945,8 @@ footer {
     margin-bottom: 0;
     margin-right: 15px;
   }
-  .day-product-subtitle {
+  .day-product-subtitle,
+  .good-item-subtitle {
     margin-top: 15px;
   }
   .footer-bottom {
@@ -1778,6 +1986,17 @@ footer {
   .banner-slider .slick-next {
     right: -70px;
   }
+  .categories-sect .slick-slide {
+    max-width: 320px;
+  }
+  .good-item {
+    max-width: 320px;
+  }
+  .good-item button {
+    margin-right: 30px;
+    padding: 15px 0;
+    width: 125px;
+  }
   .inner-item {
     font-size: 0.88889rem;
     padding: 30px;
@@ -1791,7 +2010,8 @@ footer {
   .day-product-item img {
     width: auto;
   }
-  .day-product-subtitle {
+  .day-product-subtitle,
+  .good-item-subtitle {
     font-size: 0.66667rem;
   }
   .price-title {
